welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	
	
	
	for (j<- 0 to 10){
	
	
		if(nums(5)!=value){
			return -1
		}else{
			return 5;
		}
	
	

}
}
